<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondeActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:paddingTop="40dp"
        android:text="@string/text_water"
        app:layout_constraintBottom_toTopOf="@+id/linhaHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/linhaHorizontal"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="668dp"
        android:background="@color/bg_blue"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/text_ml"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/water_ml_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_image_200"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linhaHorizontal"
        android:contentDescription="@string/btn_acrescentar_200ml"
        app:srcCompat="@drawable/groupone" />

    <ImageButton
        android:id="@+id/btn_image_450"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="300dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_ml"
        app:layout_constraintStart_toEndOf="@+id/btn_image_200"
        app:layout_constraintTop_toBottomOf="@+id/linhaHorizontal"
        android:contentDescription="@string/btn_acrescentar_450ml"
        app:srcCompat="@drawable/group2" />

    <ImageButton
        android:id="@+id/btn_image_750"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_image_450"
        app:layout_constraintTop_toBottomOf="@+id/linhaHorizontal"
        android:contentDescription="@string/btn_acrescentar_750ml"
        app:srcCompat="@drawable/group3" />

    <ImageButton
        android:id="@+id/reset_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/text_ml"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_image_450"
        app:srcCompat="@drawable/refresh_24"
        android:contentDescription="@string/bot_o_para_reserta" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:text=""
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_image_450"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linhaHorizontal" />


</androidx.constraintlayout.widget.ConstraintLayout>
